# kubernetes-playground

./: .env.production  README.md  docker-compose.yml  kubernetes-deployment-types.md  kubernetes-notes.md
containers/frontend/configuration/: nginx.conf
containers/frontend/configuration/snippets/: ssl-params.conf
kubernetes/: deployment-backend.yml  deployment-frontend.yml  pod.yml  service.yml  volumes.yml
projects/backend/: pyproject.toml
projects/backend/backend/: __main__.py  api.py
projects/backend/backend/models/: model_image_recognition_request.py
projects/backend/backend/worker/: backend_worker_celery.py  worker_entrypoint.py
projects/frontend/: README.md  angular.json  package-lock.json  package.json
projects/frontend/src/: index.html
projects/frontend/src/app/: app-routing.module.ts  app.module.ts
projects/frontend/src/app/components/drag-and-drop/: drag-and-drop.component.ts
projects/frontend/src/app/configuration/: configuration.production.ts  configuration.ts
projects/frontend/src/app/data/: image-upload-result.ts  results.ts  state-upload.ts  worker-queue.ts  worker.ts
projects/frontend/src/app/directives/: drag-and-drop.directive.ts
projects/frontend/src/app/error-pages/error-dynamic/: error-dynamic.component.html  error-dynamic.component.spec.ts  error-dynamic.component.ts
projects/frontend/src/app/error-pages/error-internalservererror/: error-internalservererror.component.html  error-internalservererror.component.spec.ts  error-internalservererror.component.ts
projects/frontend/src/app/services/: backend-api.service.ts
(+6 files in other folders)
